# readelf-py

./: .gitignore  README.md  pyproject.toml
src/: elfheader.py  programheader.py  readelf.py  sectionheader.py  symboltable.py
