[tool.poetry]
name = "readelf-py"
version = "0.1.0"
description = ""
authors = ["misc4747 <miscvd@gmail.com>"]
readme = "README.md"
packages = [{include = "readelf_py"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
